--- a/PS5_control_test/platformio.ini
+++ b/PS5_control_test/platformio.ini
@@ -7,3 +7,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+; lib_deps can be added here
+; build_flags can be added here
